<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingTop="9dp"
        android:background="@drawable/bg_dialog_share">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#FDFDFD"
                android:text="@string/action_share"
                android:textColor="#5e5e5e"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_share_weixin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/set_sel"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/share_wechat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/action_weixin"
                        android:textColor="#5e5e5e"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_share_pyq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/set_sel"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/share_moments" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/action_friend"
                        android:textColor="#5e5e5e"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/set_sel"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/ll_share_qq" >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_qq" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/action_qq"
                        android:textColor="#5e5e5e"
                        android:textSize="11sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_share_weibo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/set_sel"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/share_weibo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/action_weibo"
                        android:textColor="#5e5e5e"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_dialog_share_cancel"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#5e5e5e"
        android:textSize="17sp" />

</LinearLayout>