<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:axure="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <net.doyouhike.app.wildbird.ui.view.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        axure:left_src="@drawable/back_icon"
        axure:m_title="登录" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/deep_gray" />

    <net.doyouhike.app.wildbird.ui.view.LineEditText
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_bg"
        android:hint="手机/邮箱/用户名"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/deep_gray"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        axure:drawableRight="@drawable/edit_clear_sel" />

    <net.doyouhike.app.wildbird.ui.view.LineEditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_bg"
        android:hint="密码"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/deep_gray"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        axure:drawableRight="@drawable/yanjing_sel" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sure_sel"
        android:gravity="center"
        android:padding="10dp"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="21sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/login_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textColor="@drawable/cyan_word_sel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_resetpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="忘记密码"
            android:textColor="@drawable/cyan_word_sel"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:gravity="left"
        android:text="@string/login_tip_one"
        android:textColor="@color/deep_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_login_tips_weblink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColorHighlight="@drawable/cyan_word_sel"
        android:text="@string/login_tip_two"
        android:textColor="@color/deep_gray"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="13sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/login_tip_three"
        android:autoLink="phone"
        android:textColor="@color/deep_gray"
        android:textColorLink="@drawable/cyan_word_sel"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="13sp" />


</LinearLayout>